Make per-turn view more graphical

--- a/ui_app/static/index.html
+++ b/ui_app/static/index.html
@@ -51,7 +51,7 @@
               <button id="backBtn" class="ghost">Back to timeline</button>
             </div>
           </div>
-          <div id="turnTableWrapper" class="turn-table"></div>
+          <div id="turnTableWrapper" class="metric-grid"></div>
         </section>
       </main>
     </div>
