Add map legend and tighten spline fills

--- a/ui_app/static/index.html
+++ b/ui_app/static/index.html
@@ -67,6 +67,7 @@
               <button id="mapBackBtn" class="ghost">Back to timeline</button>
             </div>
           </div>
+          <div class="legend" id="mapLegend"></div>
           <canvas id="mapCanvas" class="map-canvas" width="900" height="620"></canvas>
         </section>
       </main>
