Serve Python-rendered map PNGs

--- a/ui_app/static/index.html
+++ b/ui_app/static/index.html
@@ -68,7 +68,7 @@
             </div>
           </div>
           <div class="legend" id="mapLegend"></div>
-          <canvas id="mapCanvas" class="map-canvas" width="900" height="620"></canvas>
+          <img id="mapImage" class="map-canvas" alt="Territory map" />
         </section>
       </main>
     </div>
