Add resource round data and UI all-metrics view

--- a/ui_app/static/index.html
+++ b/ui_app/static/index.html
@@ -39,6 +39,7 @@
             <div class="legend" id="legend"></div>
           </div>
           <canvas id="chartCanvas" width="900" height="420"></canvas>
+          <div id="allMetricsGrid" class="metric-grid hidden"></div>
         </section>
 
         <section id="turnView" class="card hidden">
