--- a/ui_app/static/index.html
+++ b/ui_app/static/index.html
@@ -23,14 +23,12 @@
             Metric
             <select id="metricSelect"></select>
           </label>
-          <button id="turnViewBtn" class="primary">Per-turn view</button>
-          <button id="mapViewBtn" class="ghost">Map view</button>
-          <button id="experimentViewBtn" class="ghost">Experiment view</button>
         </div>
       </header>
 
-      <main class="content">
-        <section id="timelineView" class="card">
+      <main class="content layout">
+        <div class="views">
+          <section id="timelineView" class="card">
           <div class="card-header">
             <div>
               <h2 id="chartTitle">Total Welfare</h2>
@@ -40,9 +38,9 @@
           </div>
           <canvas id="chartCanvas" width="900" height="420"></canvas>
           <div id="allMetricsGrid" class="metric-grid hidden"></div>
-        </section>
+          </section>
 
-        <section id="turnView" class="card hidden">
+          <section id="turnView" class="card hidden">
           <div class="card-header">
             <div>
               <h2>Turn Detail</h2>
@@ -55,9 +53,9 @@
             </div>
           </div>
           <div id="turnTableWrapper" class="metric-grid"></div>
-        </section>
+          </section>
 
-        <section id="mapView" class="card hidden">
+          <section id="mapView" class="card hidden">
           <div class="card-header">
             <div>
               <h2>Territory Map</h2>
@@ -71,9 +69,9 @@
           </div>
           <div class="legend" id="mapLegend"></div>
           <img id="mapImage" class="map-canvas" alt="Territory map" />
-        </section>
+          </section>
 
-        <section id="experimentView" class="card hidden">
+          <section id="experimentView" class="card hidden">
           <div class="card-header">
             <div>
               <h2>Experiment Summary</h2>
@@ -101,7 +99,41 @@
             <pre id="experimentSummary" class="experiment-summary"></pre>
             <img id="experimentChart" class="map-canvas" alt="Experiment chart" />
           </div>
-        </section>
+          </section>
+
+          <section id="messagesView" class="card hidden">
+            <div class="card-header">
+              <div>
+                <h2>Messages</h2>
+                <p id="messagesTurnLabel">Turn 0</p>
+              </div>
+              <div class="turn-controls">
+                <button id="messagesPrevTurnBtn">Prev</button>
+                <button id="messagesNextTurnBtn">Next</button>
+              </div>
+            </div>
+            <div class="message-controls">
+              <label>
+                Sender
+                <select id="messageSenderSelect"></select>
+              </label>
+              <label>
+                Recipient
+                <select id="messageRecipientSelect"></select>
+              </label>
+            </div>
+            <div id="messagesList" class="message-list"></div>
+          </section>
+        </div>
+
+        <aside class="side-nav">
+          <h3>Views</h3>
+          <button id="navTimeline" class="nav-btn active">Timeline</button>
+          <button id="navTurn" class="nav-btn">Per-turn</button>
+          <button id="navMap" class="nav-btn">Map</button>
+          <button id="navExperiment" class="nav-btn">Experiment</button>
+          <button id="navMessages" class="nav-btn">Messages</button>
+        </aside>
       </main>
     </div>
 
