Unify seed handling and add capital reporting

--- a/ui_app/static/index.html
+++ b/ui_app/static/index.html
@@ -78,6 +78,7 @@
               </label>
             </div>
             <div class="legend" id="mapLegend"></div>
+            <div id="mapCapitals" class="message-list"></div>
             <img id="mapImage" class="map-canvas" alt="Territory map" />
           </section>
 
