--- a/ui_app/static/index.html
+++ b/ui_app/static/index.html
@@ -77,6 +77,7 @@
                 <select id="mapDataFileSelect" class="dataFileSelect"></select>
               </label>
             </div>
+            <div class="legend hidden" id="mapLegend"></div>
             <img id="mapImage" class="map-canvas" alt="Territory map" />
           </section>
 
@@ -214,6 +215,6 @@
       </main>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js?v=2"></script>
   </body>
 </html>
